<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/offline_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/ic_launcher_foreground" />

    <TextView
        android:id="@+id/offlineTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/offlineDesc1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offline_desc_1"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/offlineDesc2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offline_desc_2"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/offlineOffline1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/offline_state"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/offlineOffline2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offline_action_1"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/offlineOffline3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offline_action_2"
        android:textAlignment="center"
        android:textColor="@color/black" />

</LinearLayout>